Проведен рефакторинг кода, добавлена настройка - места назначения скачанных файлов

--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"number_of_downloaded_presentations": 3}
+{"number_of_downloaded_presentations": 3, "authentication_data": {"p_pass": "", "p_login": ""}, "files_path": "./Informatics Practice"}
